documentacion/obtenida/ARINC 429/driver and software/CM1553-1/API/C11W32.H

typedef void VOID;
typedef int * LPINT;
typedef unsigned short USHORT;
typedef void* HCARD;

C11W32API USHORT __stdcall C11_TTRead(HCARD handleval);

C11W32API VOID __stdcall C11_TTSet(USHORT timetagval,HCARD handleval);

C11W32API VOID __stdcall C11_TTZero(HCARD handleval);

C11W32API VOID __stdcall C11_UnpackRTCWD(USHORT cwd,LPINT subaddr,LPINT trbit,LPINT mcflag,LPINT bcastflag,LPINT count);

C11W32API VOID __stdcall C11_WipeMem(HCARD handleval);

#define CONFIG_DEFAULT    0x00000000L	//Select all default settings (default)
#define CONFIG_INTCLK     0x00000000L	//Use internal clock (default)
#define CONFIG_EXTCLK     0x00000001L	//Use external clock
#define CONFIG_NOBUF      0x00000000L	//Do not use buffer mode (default)
#define CONFIG_BUF        0x00000002L	//Enable use of buffer mode
#define CONFIG_NOBCAST    0x00000000L	//Do not respond to broadcast messages (default)
#define CONFIG_BCAST      0x00000004L	//Respond to broadcast messages
#define CONFIG_STDB       0x00000000L	//Use MIL-STD-1553B standard (default)
#define CONFIG_STDA       0x00000008L	//Use MIL-STD-1553A standard
#define CONFIG_NODYNBC    0x00000000L	//Do not respond to dynamic BC mode code (default)
#define CONFIG_DYNBC      0x00000010L	//Respond to dynamic BC mode code
#define CONFIG_NOALTRETRY 0x00000000L	//Retries are not on alternate busses (BC) (default)
#define CONFIG_ALTRETRY   0x00000020L	//Retries on alternate busses (BC)
#define CONFIG_NOXMITSW   0x00000000L	//Do not respond to xmit last status mode code (default)
#define CONFIG_XMITSW     0x00000040L	//Respond to transmit last status mode code
#define CONFIG_ALLSUBADDR 0x00000000L	//Respond to all subaddresses (default)
#define CONFIG_NOSUBADDR  0x00000080L	//Do not respond to any subaddresses
#define CONFIG_WIPE       0x00000000L	//Fills memory with zeros (default)
#define CONFIG_NOWIPE     0x00000100L	//Does not fill memory with zeros
#define CONFIG_INIT       0x00000000L	//Initialize mode (default)
#define CONFIG_NOINIT     0x00000200L	//Does not initialize mode
#define CONFIG_LOGLIST    0x00000000L	//Enable log list (default)
#define CONFIG_NOLOGLIST  0x00000400L	//Disable log list
#define CONFIG_NONOTICE2  0x00000000L	//Enable log list (default)
#define CONFIG_NOTICE2    0x00000800L	//Disable log list
#define CONFIG_MONALL     0x00000000L	//Enable monitoring of all RTs (default)
#define CONFIG_MONNONE    0x00001000L	//Disable monitoring of all RTs
#define CONFIG_REGTIMEOUT 0x00000000L	//14us timeout (BC,MON) (default)
#define CONFIG_EXTTIMEOUT 0x00002000L	//30us extended timeout (BC,MON)
#define CONFIG_CHANAB     0x00000000L	//Respond to both channels (default)
#define CONFIG_CHANA      0x00010000L	//Respond to channel A
#define CONFIG_CHANB      0x00020000L	//Respond to channel B
#define CONFIG_SINGLEBUF  0x00000000L	//Use single buffer (RT) (default)
#define CONFIG_PINGPONG   0x00100000L	//Use ping-pong mode (RT)
#define CONFIG_CIRC1BUF   0x00200000L	//Use circular #1 buffers (RT)
#define CONFIG_CIRC2BUF   0x00300000L	//Use circular #2 buffers (RT)

#define SWD_IMCLR 0x8000				//Immediate clear
#define SWD_BIT10 0x0200				//Status word bit 10
#define SWD_INS   0x0200				//Instrumentation bit
#define SWD_BIT11 0x0100				//Status word bit 11
#define SWD_SRQ   0x0100				//Service request bit
#define SWD_BIT12 0x0080				//Status word bit 12
#define SWD_BIT13 0x0040				//Status word bit 13
#define SWD_BIT14 0x0020				//Status word bit 14
#define SWD_BIT15 0x0010				//Status word bit 15
#define SWD_BIT16 0x0008				//Status word bit 16
#define SWD_BUSY  0x0008				//Busy bit
#define SWD_BIT17 0x0004				//Status word bit 17
#define SWD_SSYSF 0x0004				//Subsystem flag bit
#define SWD_BIT18 0x0002				//Status word bit 18
#define SWD_BIT19 0x0001				//Status word bit 19
#define SWD_TF    0x0001				//Terminal flag

#define INT_DMAF     0x8000				//BC,RT,MON
#define INT_WRAPF    0x4000				//BC,RT
#define INT_TAPF     0x2000				//RT
#define INT_BITF     0x1000				//BC,RT,MON
#define INT_MERR     0x0800				//BC,RT,MON
#define INT_SUBAD    0x0400				//RT
#define INT_BDRCV    0x0200				//RT
#define INT_IXEQ0    0x0100				//RT
#define INT_ILCMD    0x0080				//RT
#define INT_EOL      0x0020				//BC
#define INT_ILLCMD   0x0010				//BC
#define INT_ILLOP    0x0008				//BC
#define INT_RTF      0x0004				//BC
#define INT_CBA      0x0002				//BC
#define INT_MBC      0x0001				//MON
#define INT_NONE     0x0000				//No interrupts

#define REG_INT  0x0000					//Interrupt register
#define REG_PAGE 0x0001					//Page register
#define REG_EXT  0x0002					//External register
#define REG_RESV 0x0003					//Reserved register
#define REG_INTC 0x0004					//Interrupt clear register
#define REG_RST  0x0005					//Reset register
#define REG_ERR  0x0006					//Error register
#define REG_PWE  0x0007					//Prom write enable register

#define BUSA 0							//Selects bus A
#define BUSB 1							//Selects bus B

#define MONNO  0						//Disables monitoring of a terminal address
#define MONYES 1						//Enables monitoring of a terminal address

#define COND_NONE    0x0000				//No condition
#define COND_FAIL    0x2000				//Condition when all retries have failed
#define COND_UNCOND  0x4000				//Unconditional
#define COND_SRQ     0x0002				//Condition on Service Request bit set in status word
#define COND_INS     0x0004				//Condition on Instrumentation bit set in status word
#define COND_SSFAIL  0x0008				//Condition on Subsystem Fail bit set in status word
#define COND_TF      0x0010				//Condition on Terminal Flag bit set in status word
#define COND_BUSY    0x0020				//Condition on Busy bit set in status word
#define COND_ME      0x0040				//Condition on Message Error bit set in status word
#define COND_RESPERR 0x0080				//Condition on response error
#define COND_MASK    0x00FE

#define SUMMIT_CTRL     0x0000			//Control register
#define SUMMIT_OPSTAT   0x0001			//Operational status
#define SUMMIT_CURRCMD  0x0002			//Current Command
#define SUMMIT_INTMASK  0x0003			//Interrupt Mask
#define SUMMIT_INTPEND  0x0004			//Interrupt Pending
#define SUMMIT_INTLOG   0x0005			//Interrupt Log
#define SUMMIT_BITWORD  0x0006			//BIT Word
#define SUMMIT_TTMFT    0x0007			//Time-Tag/Minor Frame Timer
#define SUMMIT_RTDACBA  0x0008			//RT Descriptor/Command Block Pointer
#define SUMMIT_RTSTATUS 0x0009			//RT Status Word
#define SUMMIT_CBC      0x000A			//Command Block Init Count
#define SUMMIT_MBA      0x000B			//Monitor Block
#define SUMMIT_MDA      0x000C			//Monitor Data
#define SUMMIT_MBC      0x000D			//Monitor Block Count
#define SUMMIT_MFH      0x000E			//Monitor Filter High
#define SUMMIT_MFL      0x000F			//Monitor Filter Low

#define ERR_NONE       0				//No error
#define ERR_UNKNOWN	  -1				//An unexpected error occurred
#define ERR_NOCS      -10				//Card Services is not present
#define ERR_NOSOCKET  -11				//The specified socket is not present
#define ERR_NOCARD    -12				//Unable to find a CM1553-1 card in the specified socket
#define ERR_NOTSR     -13				//Unable to find the CM1553-1 memory resident driver
#define ERR_CLIENT    -14				//Unable to install a local client driver
#define ERR_CS        -15				//An error was returned by Card Services
#define ERR_WIN		  -16				//Card Services could not configure the memory window, I/O window, or IRQ steering
#define ERR_SEL	  	  -17				//Unable to allocate a memory selector
#define ERR_BADHANDLE -20				//A bad handle was specified
#define ERR_COUNT     -21				//An invalid count was specified
#define ERR_ALLOC     -22				//Not enough memory to allocate
#define ERR_INDEX     -23				//The command block index was invalid or the schedule is full
#define ERR_RETRY     -31				//The retry parameter is out of range
#define ERR_COND      -32				//An invalid condition condition parameter was specified
#define ERR_BADMSG    -33				//The specified command block is not a message block
#define ERR_RTRT      -34				//The command words are not a valid RT-RT message
#define ERR_RESPONSE  -35				//A bad response or no response was received from an RT
#define ERR_FNAME     -40				//Bad filenames were specified
#define ERR_FRDWR     -41				//There was an error reading or writing the HEX file
#define ERR_HEX       -42				//There was a bad hex character in the HEX file
#define ERR_CRC       -43				//There was a bad checksum in the HEX file
#define ERR_TYPE      -44				//There was a bad type value in the HEX file
#define ERR_CISRANGE  -90				//The specified address is outside of the CS address range
#define ERR_CISNONE   -91				//The CIS is not visible
#define ERR_CISENB    -92				//The PWE register cannot be enabled
#define ERR_CISMAGIC  -93				//Unable to write to the PWE register
#define ERR_VXD       -100				//Error returned from VXD