documentacion/obtenida/ARINC 429/driver and software/CM1553-1/API/C11W32NET.CS

        [DllImport("C11W32.DLL", EntryPoint = "_C11_TTRead@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 C11_TTRead(UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_TTSet@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C11_TTSet(UInt16 timetagval, UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_TTZero@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C11_TTZero(UInt32 handleval);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_UnpackRTCWD@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C11_UnpackRTCWD(UInt16 cwd, ref Int32 subaddr, ref Int32 trbit, ref Int32 mcflag, ref Int32 bcastflag, ref Int32 count);
        [DllImport("C11W32.DLL", EntryPoint = "_C11_WipeMem@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void C11_WipeMem(UInt32 handleval);

        public const UInt32 CONFIG_DEFAULT = 0x00000000;
        public const UInt32 CONFIG_INTCLK = 0x00000000;
        public const UInt32 CONFIG_EXTCLK = 0x00000001;
        public const UInt32 CONFIG_NOBUF = 0x00000000;
        public const UInt32 CONFIG_BUF = 0x00000002;
        public const UInt32 CONFIG_NOBCAST = 0x00000000;
        public const UInt32 CONFIG_BCAST = 0x00000004;
        public const UInt32 CONFIG_STDB = 0x00000000;
        public const UInt32 CONFIG_STDA = 0x00000008;
        public const UInt32 CONFIG_NODYNBC = 0x00000000;
        public const UInt32 CONFIG_DYNBC = 0x00000010;
        public const UInt32 CONFIG_NOALTRETRY = 0x00000000;
        public const UInt32 CONFIG_ALTRETRY = 0x00000020;
        public const UInt32 CONFIG_NOXMITSW = 0x00000000;
        public const UInt32 CONFIG_XMITSW = 0x00000040;
        public const UInt32 CONFIG_ALLSUBADDR = 0x00000000;
        public const UInt32 CONFIG_NOSUBADDR = 0x00000080;
        public const UInt32 CONFIG_WIPE = 0x00000000;
        public const UInt32 CONFIG_NOWIPE = 0x00000100;
        public const UInt32 CONFIG_INIT = 0x00000000;
        public const UInt32 CONFIG_NOINIT = 0x00000200;
        public const UInt32 CONFIG_LOGLIST = 0x00000000;
        public const UInt32 CONFIG_NOLOGLIST = 0x00000400;
        public const UInt32 CONFIG_NONOTICE2 = 0x00000000;
        public const UInt32 CONFIG_NOTICE2 = 0x00000800;
        public const UInt32 CONFIG_MONALL = 0x00000000;
        public const UInt32 CONFIG_MONNONE = 0x00001000;
        public const UInt32 CONFIG_REGTIMEOUT = 0x00000000;
        public const UInt32 CONFIG_EXTTIMEOUT = 0x00002000;
        public const UInt32 CONFIG_CHANAB = 0x00000000;
        public const UInt32 CONFIG_CHANA = 0x00010000;
        public const UInt32 CONFIG_CHANB = 0x00020000;
        public const UInt32 CONFIG_SINGLEBUF = 0x00000000;
        public const UInt32 CONFIG_PINGPONG = 0x00100000;
        public const UInt32 CONFIG_CIRC1BUF = 0x00200000;
        public const UInt32 CONFIG_CIRC2BUF = 0x00300000;

        public const UInt32 SWD_IMCLR = 0x8000;				//Immediate clear
        public const UInt32 SWD_BIT10 = 0x0200;				//Status word bit 10
        public const UInt32 SWD_INS = 0x0200;				//Instrumentation bit
        public const UInt32 SWD_BIT11 = 0x0100;				//Status word bit 11
        public const UInt32 SWD_SRQ = 0x0100;				//Service request bit
        public const UInt32 SWD_BIT12 = 0x0080;				//Status word bit 12
        public const UInt32 SWD_BIT13 = 0x0040;				//Status word bit 13
        public const UInt32 SWD_BIT14 = 0x0020;				//Status word bit 14
        public const UInt32 SWD_BIT15 = 0x0010;				//Status word bit 15
        public const UInt32 SWD_BIT16 = 0x0008;				//Status word bit 16
        public const UInt32 SWD_BUSY = 0x0008;				//Busy bit
        public const UInt32 SWD_BIT17 = 0x0004;				//Status word bit 17
        public const UInt32 SWD_SSYSF = 0x0004;				//Subsystem flag bit
        public const UInt32 SWD_BIT18 = 0x0002;				//Status word bit 18
        public const UInt32 SWD_BIT19 = 0x0001;				//Status word bit 19
        public const UInt32 SWD_TF = 0x0001;				//Terminal flag

        public const UInt32 INT_DMAF = 0x8000;				//BC,RT,MON
        public const UInt32 INT_WRAPF = 0x4000;				//BC,RT
        public const UInt32 INT_TAPF = 0x2000;				//RT
        public const UInt32 INT_BITF = 0x1000;				//BC,RT,MON
        public const UInt32 INT_MERR = 0x0800;				//BC,RT,MON
        public const UInt32 INT_SUBAD = 0x0400;				//RT
        public const UInt32 INT_BDRCV = 0x0200;				//RT
        public const UInt32 INT_IXEQ0 = 0x0100;				//RT
        public const UInt32 INT_ILCMD = 0x0080;				//RT
        public const UInt32 INT_EOL = 0x0020;				//BC
        public const UInt32 INT_ILLCMD = 0x0010;				//BC
        public const UInt32 INT_ILLOP = 0x0008;				//BC
        public const UInt32 INT_RTF = 0x0004;				//BC
        public const UInt32 INT_CBA = 0x0002;				//BC
        public const UInt32 INT_MBC = 0x0001;				//MON
        public const UInt32 INT_NONE = 0x0000;				//No interrupts

        public const UInt32 REG_INT = 0x0000;					//Interrupt register
        public const UInt32 REG_PAGE = 0x0001;					//Page register
        public const UInt32 REG_EXT = 0x0002;					//External register
        public const UInt32 REG_RESV = 0x0003;					//Reserved register
        public const UInt32 REG_INTC = 0x0004;					//Interrupt clear register
        public const UInt32 REG_RST = 0x0005;					//Reset register
        public const UInt32 REG_ERR = 0x0006;					//Error register
        public const UInt32 REG_PWE = 0x0007;					//Prom write enable register

        public const UInt16 BUSA = 0;	//Selects bus A
        public const UInt16 BUSB = 1;	//Selects bus B

        public const UInt16 MONNO = 0;	//Disables monitoring of a terminal address
        public const UInt16 MONYES = 1;	//Enables monitoring of a terminal address

        public const UInt32 COND_NONE = 0x0000;				//No condition
        public const UInt32 COND_FAIL = 0x2000;				//Condition when all retries have failed
        public const UInt32 COND_UNCOND = 0x4000;				//Unconditional
        public const UInt32 COND_SRQ = 0x0002;				//Condition on Service Request bit set in status word
        public const UInt32 COND_INS = 0x0004;				//Condition on Instrumentation bit set in status word
        public const UInt32 COND_SSFAIL = 0x0008;				//Condition on Subsystem Fail bit set in status word
        public const UInt32 COND_TF = 0x0010;				//Condition on Terminal Flag bit set in status word
        public const UInt32 COND_BUSY = 0x0020;				//Condition on Busy bit set in status word
        public const UInt32 COND_ME = 0x0040;				//Condition on Message Error bit set in status word
        public const UInt32 COND_RESPERR = 0x0080;				//Condition on response error
        public const UInt32 COND_MASK = 0x00FE;

        public const UInt32 SUMMIT_CTRL = 0x0000;			//Control register
        public const UInt32 SUMMIT_OPSTAT = 0x0001;			//Operational status
        public const UInt32 SUMMIT_CURRCMD = 0x0002;			//Current Command
        public const UInt32 SUMMIT_INTMASK = 0x0003;			//Interrupt Mask
        public const UInt32 SUMMIT_INTPEND = 0x0004;			//Interrupt Pending
        public const UInt32 SUMMIT_INTLOG = 0x0005;			//Interrupt Log
        public const UInt32 SUMMIT_BITWORD = 0x0006;			//BIT Word
        public const UInt32 SUMMIT_TTMFT = 0x0007;			//Time-Tag/Minor Frame Timer
        public const UInt32 SUMMIT_RTDACBA = 0x0008;			//RT Descriptor/Command Block Pointer
        public const UInt32 SUMMIT_RTSTATUS = 0x0009;			//RT Status Word
        public const UInt32 SUMMIT_CBC = 0x000A;			//Command Block Init Count
        public const UInt32 SUMMIT_MBA = 0x000B;			//Monitor Block
        public const UInt32 SUMMIT_MDA = 0x000C;			//Monitor Data
        public const UInt32 SUMMIT_MBC = 0x000D;			//Monitor Block Count
        public const UInt32 SUMMIT_MFH = 0x000E;			//Monitor Filter High
        public const UInt32 SUMMIT_MFL = 0x000F;			//Monitor Filter Low

        public const UInt16 ERR_NONE = 0;	//No error
        public const Int16 ERR_UNKNOWN = -1;	//An unexpected error occurred
        public const Int16 ERR_NOCS = -10;	//Card Services is not present
        public const Int16 ERR_NOSOCKET = -11;	//The specified socket is not present
        public const Int16 ERR_NOCARD = -12;	//Unable to find a CM1553-1 card in the specified socket
        public const Int16 ERR_NOTSR = -13;	//Unable to find the CM1553-1 memory resident driver
        public const Int16 ERR_CLIENT = -14;	//Unable to install a local client driver
        public const Int16 ERR_CS = -15;	//An error was returned by Card Services
        public const Int16 ERR_WIN = -16;	//Card Services could not configure the memory window, I/O window, or IRQ steering
        public const Int16 ERR_SEL = -17;	//Unable to allocate a memory selector
        public const Int16 ERR_BADHANDLE = -20;	//A bad handle was specified
        public const Int16 ERR_COUNT = -21;	//An invalid count was specified
        public const Int16 ERR_ALLOC = -22;	//Not enough memory to allocate
        public const Int16 ERR_INDEX = -23;	//The command block index was invalid or the schedule is full
        public const Int16 ERR_RETRY = -31;	//The retry parameter is out of range
        public const Int16 ERR_COND = -32;	//An invalid condition condition parameter was specified
        public const Int16 ERR_BADMSG = -33;	//The specified command block is not a message block
        public const Int16 ERR_RTRT = -34;	//The command words are not a valid RT-RT message
        public const Int16 ERR_RESPONSE = -35;	//A bad response or no response was received from an RT
        public const Int16 ERR_FNAME = -40;	//Bad filenames were specified
        public const Int16 ERR_FRDWR = -41;	//There was an error reading or writing the HEX file
        public const Int16 ERR_HEX = -42;	//There was a bad hex character in the HEX file
        public const Int16 ERR_CRC = -43;	//There was a bad checksum in the HEX file
        public const Int16 ERR_TYPE = -44;	//There was a bad type value in the HEX file
        public const Int16 ERR_CISRANGE = -90;	//The specified address is outside of the CS address range
        public const Int16 ERR_CISNONE = -91;	//The CIS is not visible
        public const Int16 ERR_CISENB = -92;	//The PWE register cannot be enabled
        public const Int16 ERR_CISMAGIC = -93;	//Unable to write to the PWE register
        public const Int16 ERR_VXD = -100;	//Error returned from VXD

    }	//end class
}	//end namespace
